<resources>
    <string name="ck_ablum_not_supported">不支持调起相册</string>
    <string name="ck_add">添加</string>
    <string name="ck_add_adjust">添加调节</string>
    <string name="ck_add_audio">添加音频</string>
    <string name="ck_add_audio_record">添加录音</string>
    <string name="ck_add_effect">添加特效</string>
    <string name="ck_add_epilogue">添加片尾</string>
    <string name="ck_add_filter">添加滤镜</string>
    <string name="ck_add_image_sticker">添加贴纸</string>
    <string name="ck_add_music">添加音乐</string>
    <string name="ck_add_pip">添加画中画</string>
    <string name="ck_add_sound_effect">添加音效</string>
    <string name="ck_add_sticker">添加贴纸</string>
    <string name="ck_add_text">添加文本</string>
    <string name="ck_add_text_sticker">添加文本</string>
    <string name="ck_adjust">调节</string>
    <string name="ck_adjust_reset_content">确认重置所有参数吗？</string>
    <string name="ck_adjust_reset_content_current">确定重置当前位置所有参数吗？</string>
    <string name="ck_adjust_reset_title">重置参数</string>
    <string name="ck_age">年龄</string>
    <string name="ck_all_dir_name">所有内容</string>
    <string name="ck_all_image">图片</string>
    <string name="ck_all_video">视频</string>
    <string name="ck_anger">生气</string>
    <string name="ck_anim_all">组合动画</string>
    <string name="ck_anim_duration">动画时长</string>
    <string name="ck_anim_in">入场动画</string>
    <string name="ck_anim_out">出场动画</string>
    <string name="ck_animation">动画</string>
    <string name="ck_animation_group">组合动画</string>
    <string name="ck_animation_in">入场动画</string>
    <string name="ck_animation_out">出场动画</string>
    <string name="ck_animoji_boy">男孩</string>
    <string name="ck_animoji_girl">女孩</string>
    <string name="ck_applaud">鼓掌</string>
    <string name="ck_applied_range">作用对象</string>
    <string name="ck_apply_all">应用全部</string>
    <string name="ck_apply_text_sticker_cover">添加文字</string>
    <string name="ck_arrangement">排列</string>
    <string name="ck_audio">音频</string>
    <string name="ck_audio_downloading">音频下载中</string>
    <string name="ck_audio_fade_in">淡入时长</string>
    <string name="ck_audio_fade_out">淡出时长</string>
    <string name="ck_audio_generate_success">音频已生成，请到音频模块查看</string>
    <string name="ck_authentication_failed">鉴权出问题啦~</string>
    <string name="ck_auto_recognize_subtitle">自动识别字幕</string>
    <string name="ck_back">返回</string>
    <string name="ck_back_light">背光</string>
    <string name="ck_back_off">退后</string>
    <string name="ck_back_to_home">返回首页</string>
    <string name="ck_basic">基础</string>
    <string name="ck_beautify">美颜</string>
    <string name="ck_beauty">颜值</string>
    <string name="ck_beauty_body_arm_slim">手臂</string>
    <string name="ck_beauty_body_breast_enlarge">丰胸</string>
    <string name="ck_beauty_body_hip_enhance">翘臀</string>
    <string name="ck_beauty_body_leg_slim">瘦腿</string>
    <string name="ck_beauty_body_long_leg">长腿</string>
    <string name="ck_beauty_body_neck_enhance">天鹅颈</string>
    <string name="ck_beauty_body_shrink_head">小头</string>
    <string name="ck_beauty_body_thin">瘦身</string>
    <string name="ck_beauty_body_waist_slim">收腰</string>
    <string name="ck_beauty_face_brighten_eye">亮眼</string>
    <string name="ck_beauty_face_eye_plump">卧蚕</string>
    <string name="ck_beauty_face_eye_single_to_double_eyelid">双眼皮</string>
    <string name="ck_beauty_face_remove_pouch">黑眼圈</string>
    <string name="ck_beauty_face_sharpen">锐化</string>
    <string name="ck_beauty_face_smile_folds">法令纹</string>
    <string name="ck_beauty_face_smooth">磨皮</string>
    <string name="ck_beauty_face_whiten">美白</string>
    <string name="ck_beauty_face_whiten_teeth">白牙</string>
    <string name="ck_beauty_reshape_cheek">瘦颧骨</string>
    <string name="ck_beauty_reshape_chin">下巴</string>
    <string name="ck_beauty_reshape_dark_circle">黑眼圈</string>
    <string name="ck_beauty_reshape_decree">法令纹</string>
    <string name="ck_beauty_reshape_eye">大眼</string>
    <string name="ck_beauty_reshape_eye_move">眼移动</string>
    <string name="ck_beauty_reshape_eye_rotate">眼角度</string>
    <string name="ck_beauty_reshape_eye_spacing">眼距</string>
    <string name="ck_beauty_reshape_face_cut">窄脸</string>
    <string name="ck_beauty_reshape_face_overall">瘦脸</string>
    <string name="ck_beauty_reshape_face_small">小脸</string>
    <string name="ck_beauty_reshape_forehead">额头</string>
    <string name="ck_beauty_reshape_jaw">下颌骨</string>
    <string name="ck_beauty_reshape_mouth_move">缩人中</string>
    <string name="ck_beauty_reshape_mouth_smile">微笑</string>
    <string name="ck_beauty_reshape_mouth_zoom">嘴型</string>
    <string name="ck_beauty_reshape_nose_lean">瘦鼻</string>
    <string name="ck_beauty_reshape_nose_long">长鼻</string>
    <string name="ck_black">黑种人</string>
    <string name="ck_blusher_mitao">蜜桃</string>
    <string name="ck_blusher_qiaopi">俏皮</string>
    <string name="ck_blusher_richang">日常</string>
    <string name="ck_blusher_shaishang">晒伤</string>
    <string name="ck_blusher_shaishanghong">晒伤红</string>
    <string name="ck_blusher_tiancheng">甜橙</string>
    <string name="ck_blusher_weixunfen">微醺</string>
    <string name="ck_blusher_xinji">心机</string>
    <string name="ck_blusher_yuanqiju">元气橘</string>
    <string name="ck_bold_italic">粗斜体</string>
    <string name="ck_brand_rec">车牌检测</string>
    <string name="ck_brightness">亮度</string>
    <string name="ck_brown">印度人</string>
    <string name="ck_camera_effect">相机特效</string>
    <string name="ck_cancel">取消</string>
    <string name="ck_cant_play_video">没有可以播放的程序</string>
    <string name="ck_canvas">画布</string>
    <string name="ck_canvas_blur">画布模糊</string>
    <string name="ck_canvas_color">画布颜色</string>
    <string name="ck_canvas_style">画布样式</string>
    <string name="ck_car_blur">是否模糊</string>
    <string name="ck_car_detect">车辆检测</string>
    <string name="ck_car_light">是否明亮</string>
    <string name="ck_cat">猫</string>
    <string name="ck_change_filter">切换滤镜</string>
    <string name="ck_change_scan_mode">切换扫描模式</string>
    <string name="ck_change_voice">变声</string>
    <string name="ck_choose">选择一张人脸图</string>
    <string name="ck_click_too_quick">点击太频繁了</string>
    <string name="ck_close">关闭</string>
    <string name="ck_closing_eye">眨眼</string>
    <string name="ck_cloudy">多云</string>
    <string name="ck_color_fade">褪色</string>
    <string name="ck_color_temperature">色温</string>
    <string name="ck_compose">合成</string>
    <string name="ck_compose_failed">合成失败ret:</string>
    <string name="ck_confirm">确定</string>
    <string name="ck_confuse">疑惑</string>
    <string name="ck_content_will_disappear">退出后编辑的内容将会消失</string>
    <string name="ck_continue_edit">继续编辑</string>
    <string name="ck_contrast">对比度</string>
    <string name="ck_copy">复制</string>
    <string name="ck_cost">耗时</string>
    <string name="ck_cost_default">耗时:0ms</string>
    <string name="ck_count_string">个</string>
    <string name="ck_crop">裁剪</string>
    <string name="ck_current_face">当前人脸数</string>
    <string name="ck_current_no_more">暂时没有更多了</string>
    <string name="ck_curve_speed">曲线变速</string>
    <string name="ck_curve_speed_dst_duration">%.1f</string>
    <string name="ck_curve_speed_src_duration">时长%.1f</string>
    <string name="ck_curve_speed_value">%1$.1f X</string>
    <string name="ck_delete">删除</string>
    <string name="ck_delete_adjust">删除调节</string>
    <string name="ck_delete_draft_text">是否删除该草稿？</string>
    <string name="ck_delete_draft_title">删除草稿</string>
    <string name="ck_delete_filter">删除滤镜</string>
    <string name="ck_delete_keyframe">删除关键帧</string>
    <string name="ck_detect">检测</string>
    <string name="ck_detect_count">总检测次数</string>
    <string name="ck_dist">距离(m):</string>
    <string name="ck_dog">狗</string>
    <string name="ck_done">完成</string>
    <string name="ck_export">导出</string>
    <string name="ck_download_fail">下载失败</string>
    <string name="ck_download_sticker">下载贴纸</string>
    <string name="ck_download_success">下载成功</string>
    <string name="ck_drag_preview_music">拖动试听音乐</string>
    <string name="ck_drag_select_show_region">拖动或双指缩放调整画面</string>
    <string name="ck_duet">合拍</string>
    <string name="ck_duration">时长</string>
    <string name="ck_dynamic_action_tip">与手机保持一定距离，\n直到轮廓内可以看见全身</string>
    <string name="ck_edit">编辑</string>
    <string name="ck_edit_clip">剪辑</string>
    <string name="ck_edit_image_cover">点击编辑</string>
    <string name="ck_effect">特效</string>
    <string name="ck_enable">开启</string>
    <string name="ck_engine_error_no_initialization">语音引擎未初始化，请初始化后重试</string>
    <string name="ck_enter_text">输入文字</string>
    <string name="ck_epilogue">片尾</string>
    <string name="ck_exclusive_tip">重新打开应用查看效果</string>
    <string name="ck_exit">退出</string>
    <string name="ck_expression">表情</string>
    <string name="ck_eye_dadizong">大地棕</string>
    <string name="ck_eye_jiaotangzong">焦糖棕</string>
    <string name="ck_eye_meizihong">梅子红</string>
    <string name="ck_eye_naichase">奶茶色</string>
    <string name="ck_eye_qizhifen">气质粉</string>
    <string name="ck_eye_shaonvfen">少女粉</string>
    <string name="ck_eye_wanxiahong">晚霞红</string>
    <string name="ck_eye_yanxunzong">烟熏棕</string>
    <string name="ck_eye_yuanqiju">元气橘</string>
    <string name="ck_eye_ziranlan">自然蓝</string>
    <string name="ck_eyebrow_BKO1">BK01</string>
    <string name="ck_eyebrow_BKO2">BK02</string>
    <string name="ck_eyebrow_BKO3">BK03</string>
    <string name="ck_eyebrow_BRO1">BR01</string>
    <string name="ck_eyebrow_chunhei">纯黑</string>
    <string name="ck_eyebrow_danhui">淡灰</string>
    <string name="ck_eyebrow_ziranhei">自然黑</string>
    <string name="ck_eyelash_nongmi">浓密</string>
    <string name="ck_eyelash_shanxing">扇形</string>
    <string name="ck_eyelash_wumei">妩媚</string>
    <string name="ck_face_106_title">人脸106点</string>
    <string name="ck_face_280_desc">眼球+嘴唇</string>
    <string name="ck_face_280_title">人脸280点</string>
    <string name="ck_face_attr_desc">属性表情</string>
    <string name="ck_face_attr_title">人脸属性</string>
    <string name="ck_face_cluster_class_name">人物</string>
    <string name="ck_face_cluster_clean">关闭</string>
    <string name="ck_face_cluster_null_class_name">未识别人物</string>
    <string name="ck_face_cluster_start">开始聚类</string>
    <string name="ck_face_cluster_upload">上传图片</string>
    <string name="ck_face_count">当前人脸数</string>
    <string name="ck_face_more_than_one">检测到超过一张人脸</string>
    <string name="ck_face_verify_detect">检测到相同人脸</string>
    <string name="ck_face_verify_no_detect">未检测到相同人脸</string>
    <string name="ck_face_verify_none_desc">关闭对比</string>
    <string name="ck_face_verify_none_title">无</string>
    <string name="ck_face_verify_upload_desc">上传对比照片</string>
    <string name="ck_face_verify_upload_title">上传照片</string>
    <string name="ck_facial_1">修容01</string>
    <string name="ck_facial_2">修容02</string>
    <string name="ck_facial_3">修容03</string>
    <string name="ck_facial_4">修容04</string>
    <string name="ck_fade">淡化</string>
    <string name="ck_fail_to_split">定格失败:拆分视频失败</string>
    <string name="ck_fear">害怕</string>
    <string name="ck_female">女</string>
    <string name="ck_save_content_hint">创作尚未保存，是否存入 草稿箱？</string>
    <string name="ck_text_anim_duration">动画时长</string>
    <string name="ck_text_anim_in">入场动画</string>
    <string name="ck_text_anim_loop">循环动画</string>
    <string name="ck_text_anim_out">出场动画</string>
    <string name="ck_text_anim_quick">快</string>
    <string name="ck_text_anim_slow">慢</string>
    <string name="ck_text_sticker_shadow_angle">角度</string>
    <string name="ck_text_sticker_shadow_offset">距离</string>
    <string name="ck_text_sticker_shadow_smoothing">模糊度</string>
    <string name="ck_text_sticker_transparency">透明度</string>
    <string name="ck_video_mask">蒙版</string>
    <string name="ck_video_mask_feather">羽化</string>
    <string name="ck_video_mask_invert">反转</string>
    <string name="ck_whether_exit_edit">确定退出编辑吗</string>
</resources>