<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="300dp"
    android:layout_height="172dp">

    <ImageView
        android:id="@+id/bg"
        android:layout_width="300dp"
        android:layout_height="172dp"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:background="@drawable/bg_none_draft"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/ck_whether_exit_edit"
        android:textColor="@color/black"
        android:textSize="18sp"
        app:layout_constraintLeft_toLeftOf="@id/bg"
        app:layout_constraintRight_toRightOf="@id/bg"
        app:layout_constraintTop_toTopOf="@id/bg" />

    <TextView
        android:id="@+id/content"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:gravity="center"
        android:text="@string/ck_content_will_disappear"
        android:textColor="@color/transparent_80p"
        android:textSize="14sp"
        app:layout_constraintLeft_toLeftOf="@id/bg"
        app:layout_constraintRight_toRightOf="@id/bg"
        app:layout_constraintTop_toBottomOf="@id/title" />

    <TextView
        android:id="@+id/exit"
        android:layout_width="120dp"
        android:layout_height="40dp"
        android:layout_marginTop="24dp"
        android:background="@drawable/bg_draft_edit_exit"
        android:gravity="center"
        android:text="@string/ck_exit"
        android:textColor="@color/black"
        android:textSize="14sp"
        app:layout_constraintHorizontal_chainStyle="spread"
        app:layout_constraintLeft_toLeftOf="@id/bg"
        app:layout_constraintRight_toLeftOf="@id/continue_edit"
        app:layout_constraintTop_toBottomOf="@id/content" />

    <TextView
        android:id="@+id/continue_edit"
        android:layout_width="120dp"
        android:layout_height="40dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="24dp"
        android:background="@drawable/bg_draft_save_confirm"
        android:gravity="center"
        android:text="@string/ck_continue_edit"
        android:textColor="@color/colorWhite"
        android:textSize="14sp"
        app:layout_constraintLeft_toRightOf="@id/exit"
        app:layout_constraintRight_toRightOf="@id/bg"
        app:layout_constraintTop_toBottomOf="@id/content" />

</androidx.constraintlayout.widget.ConstraintLayout>