<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:clickable="true"
        android:descendantFocusability="afterDescendants"
        android:layout_height="match_parent">

    <ImageView
        android:id="@+id/bg"
        android:layout_width="match_parent"
        android:layout_height="208dp"
        android:background="@color/black_home"
        app:layout_constraintBottom_toBottomOf="parent" />


    <TextView
        android:id="@+id/tv_feature"
        android:layout_width="wrap_content"
        android:layout_height="20dp"
        android:layout_marginLeft="16dp"
        android:text="@string/ck_video_mask_feather"
        android:textColor="@color/colorWhite"
        android:textSize="12sp"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="@id/pb_feather"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/pb_feather"
        app:layout_constraintTop_toTopOf="@id/pb_feather"
        tools:visibility="visible" />

    <com.ss.ugc.android.editor.base.view.ProgressBar
        android:id="@+id/pb_feather"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:layout_marginBottom="5dp"
        android:paddingStart="43dp"
        android:paddingTop="25dp"
        android:paddingEnd="43dp"
        android:visibility="invisible"
        app:activeLineColor="@color/tv_bottom_color"
        app:circleRadius="5dp"
        app:inactiveLineColor="#535353"
        app:layout_constraintLeft_toRightOf="@id/tv_feature"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@id/bg"
        app:textHeight="20dp"
        app:textSize="10sp"
        tools:visibility="visible" />

    <com.ss.ugc.android.editor.base.resourceview.ResourceListView
        android:id="@+id/rcv_mask"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginBottom="25dp"
        android:clipChildren="true"
        android:clipToPadding="true"
        android:paddingStart="9dp"
        android:paddingEnd="0dp"
        app:layout_constraintBottom_toTopOf="@id/tv_title"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/pb_feather" />

    <ImageView
        android:id="@+id/confirm"
        android:layout_width="44dp"
        android:layout_height="44dp"
        android:layout_marginEnd="3dp"
        android:layout_marginBottom="3dp"
        android:scaleType="center"
        android:src="@drawable/ic_ok"
        app:layout_constraintBottom_toBottomOf="@+id/bg"
        app:layout_constraintRight_toRightOf="@id/bg" />

    <TextView
        android:id="@+id/tv_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ck_video_mask"
        android:textColor="@color/colorWhite"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="@id/confirm"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@id/confirm"
        tools:text="@string/ck_video_mask" />

    <TextView
        android:id="@+id/tv_mask_invert"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:visibility="invisible"

        android:text="@string/ck_video_mask_invert"
        android:clickable="true"
        android:textColor="@color/colorWhite"
        android:textSize="13sp"

        app:layout_constraintBottom_toBottomOf="@id/tv_title"
        app:layout_constraintTop_toTopOf="@id/tv_title"
        app:layout_constraintLeft_toLeftOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>